Rebranded-TIXAE-to-Orova-in-voice-docs

--- a/Pricing/affiliate.mdx
+++ b/Pricing/affiliate.mdx
@@ -1,12 +1,12 @@
 ---
 title: "Affiliate Program"
-description: "Guide to understanding and using the TIXAE Agents Affiliate Program."
+description: "Guide to understanding and using the Orova Agents Affiliate Program."
 icon: handshake
 ---
 
 ## Overview
 
-The TIXAE Agents Affiliate Program allows you to earn commissions by referring users to our platform. As an affiliate, you receive a 30% lifetime commission on every purchase made by users you refer. This document provides a detailed guide on how to use your affiliate link, track your referrals, and manage your payouts.
+The Orova Agents Affiliate Program allows you to earn commissions by referring users to our platform. As an affiliate, you receive a 30% lifetime commission on every purchase made by users you refer. This document provides a detailed guide on how to use your affiliate link, track your referrals, and manage your payouts.
 
 ---
 
@@ -25,7 +25,7 @@ In your **Affiliate Dashboard**, you’ll find the following key statistics:
 </Note>
 
 - **Total Users Referred**:  
-  This stat shows the number of users who have signed up for TIXAE Agents using your referral link.
+  This stat shows the number of users who have signed up for Orova Agents using your referral link.
 
 - **Total Conversions**:  
   Indicates the number of users who have successfully converted to paying customers.
