--- a/Support/faq.mdx
+++ b/Support/faq.mdx
@@ -1,48 +1,48 @@
 ---
 title: 'FAQ'
-description: 'Welcome to the Frequently Asked Questions (FAQs) section of the TIXAE Agents documentation. Here, we’ve compiled the most common queries to help you get started and troubleshoot any issues you may encounter.'
+description: 'Welcome to the Frequently Asked Questions (FAQs) section of the Orova Agents documentation. Here, we’ve compiled the most common queries to help you get started and troubleshoot any issues you may encounter.'
 icon: comments
 ---
 
 ## General
 
-### 1. What is TIXAE Agents?
+### 1. What is Orova Agents?
 
 <Card>
-TIXAE Agents is a platform that provides AI-powered chatbots and large language models (LLMs) designed to enhance customer interaction. It helps businesses streamline communication through automated chat systems while also offering human interaction when needed.
+Orova Agents is a platform that provides AI-powered chatbots and large language models (LLMs) designed to enhance customer interaction. It helps businesses streamline communication through automated chat systems while also offering human interaction when needed.
 </Card>
 
 ---
 
-### 2. How do I create a TIXAE agent?
+### 2. How do I create a Orova agent?
 
 <Tip>
-To create a TIXAE agent, sign up on the TIXAE platform and follow the [Setup Instructions](/agent-creation/design-and-setup). The instructions are beginner-friendly and provide step-by-step guidance.
+To create a Orova agent, sign up on the Orova platform and follow the [Setup Instructions](/agent-creation/design-and-setup). The instructions are beginner-friendly and provide step-by-step guidance.
 </Tip>
 
 ---
 
-### 3. How do I manage my TIXAE agent?
+### 3. How do I manage my Orova agent?
 
 <Card>
-You can manage your TIXAE agent through the TIXAE dashboard, where you can view analytics, edit settings, and customize interactions.
+You can manage your Orova agent through the Orova dashboard, where you can view analytics, edit settings, and customize interactions.
 </Card>
 
 ---
 
 ## White-Labeling
 
-### 4. What does "white-labeling" mean in TIXAE Agents?
+### 4. What does "white-labeling" mean in Orova Agents?
 
 <Note>
-White-labeling allows you to brand and customize the TIXAE platform with your own branding (logos, color schemes, etc.). This enables you to offer chatbot services under your brand name while leveraging TIXAE’s backend technology.
+White-labeling allows you to brand and customize the Orova platform with your own branding (logos, color schemes, etc.). This enables you to offer chatbot services under your brand name while leveraging Orova’s backend technology.
 </Note>
 
 ---
 
 ## Integration & Channels
 
-### 5. How do I integrate WhatsApp with TIXAE Agents?
+### 5. How do I integrate WhatsApp with Orova Agents?
 
 <Card>
 1. Go to the **Channels** section in the dashboard.  
@@ -60,7 +60,7 @@ For detailed steps, visit the **[WhatsApp Integration](/integration/Channels/wha
 
 <Note>
 To set up Meta channels like Facebook Messenger or Instagram:  
-1. Go to the **Channels** section in the TIXAE dashboard.  
+1. Go to the **Channels** section in the Orova dashboard.  
 2. Choose the Meta channel (Facebook or Instagram) you want to integrate.  
 3. Follow the setup instructions to authenticate and connect your Meta account.  
 </Note>
