--- a/Support/troubleshooting.mdx
+++ b/Support/troubleshooting.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Troubleshooting'
-description: 'Quick solutions to common issues you may encounter while using TIXAE Agents.'
+description: 'Quick solutions to common issues you may encounter while using Orova Agents.'
 icon: 'wrench'
 ---
 
@@ -106,7 +106,7 @@ This issue often occurs due to conflicting CSS on your website, especially when 
 - Incorrect WhatsApp Business ID.  
 - Incorrect Webhook URL.  
 - Expired or invalid tokens.  
-- Configuration errors in the TIXAE Agents dashboard.  
+- Configuration errors in the Orova Agents dashboard.  
 </Warning>
 
 <Card>  
@@ -122,7 +122,7 @@ This issue often occurs due to conflicting CSS on your website, especially when 
    - Double-check the API key, phone number ID, and business account ID.  
 
 2. **Refresh or Renew Access Tokens**:  
-   - Generate a new token and update it in the **Channels** section of your TIXAE dashboard.  
+   - Generate a new token and update it in the **Channels** section of your Orova dashboard.  
 
 3. **Verify Number Status**:  
    - Ensure your phone number is verified and connected to the WhatsApp Business API.  
