--- a/voice/config/advanced.mdx
+++ b/voice/config/advanced.mdx
@@ -1,10 +1,10 @@
 ---
 title: Advanced Settings
-description: "Learn how to configure advanced settings in TIXAE Voice Suite."
+description: "Learn how to configure advanced settings in Orova Voice Suite."
 icon: "gear"
 ---
 
-The **Advanced Settings** section in TIXAE Voice Suite provides additional options to fine-tune your voice interactions. From enabling web calling to configuring server webhooks, this section allows greater flexibility for advanced use cases.  
+The **Advanced Settings** section in Orova Voice Suite provides additional options to fine-tune your voice interactions. From enabling web calling to configuring server webhooks, this section allows greater flexibility for advanced use cases.  
 
 ---
 
