--- a/voice/config/speechgen.mdx
+++ b/voice/config/speechgen.mdx
@@ -1,10 +1,10 @@
 ---
 title: Speech Generation
-description: "Learn how to configure speech generation in TIXAE Voice Suite."
+description: "Learn how to configure speech generation in Orova Voice Suite."
 icon: "waveform"
 ---
 
-Learn how to configure **Speech Generation** in the TIXAE Voice Suite. Use providers like **ElevenLabs** to generate human-like speech responses with customizable options for tone, background noise, and punctuation breaks.
+Learn how to configure **Speech Generation** in the Orova Voice Suite. Use providers like **ElevenLabs** to generate human-like speech responses with customizable options for tone, background noise, and punctuation breaks.
 
 ---
 
@@ -12,7 +12,7 @@ Learn how to configure **Speech Generation** in the TIXAE Voice Suite. Use provi
 
 ### 1. Select a Speech Provider  
 
-1. Navigate to the **Voice Setup** page in your TIXAE dashboard.  
+1. Navigate to the **Voice Setup** page in your Orova dashboard.  
 2. Click on the **Speech Gen** tab.  
 3. From the **Speech Provider** dropdown, select your preferred provider:  
    - **ElevenLabs** is currently supported.  
