--- a/voice/config/transcriber.mdx
+++ b/voice/config/transcriber.mdx
@@ -1,10 +1,10 @@
 ---
 title: Transcriber Configuration
-description: "Learn how to configure speech-to-text transcribers in TIXAE Voice Suite."
+description: "Learn how to configure speech-to-text transcribers in Orova Voice Suite."
 icon: "subtitles"
 ---
 
-Learn how to configure **speech-to-text transcribers** in TIXAE Voice Suite. Transcribers convert user voice inputs into real-time text using providers like **Deepgram**.
+Learn how to configure **speech-to-text transcribers** in Orova Voice Suite. Transcribers convert user voice inputs into real-time text using providers like **Deepgram**.
 
 ---
 
@@ -12,7 +12,7 @@ Learn how to configure **speech-to-text transcribers** in TIXAE Voice Suite. Tra
 
 Follow these steps to set up the transcriber:  
 
-1. Navigate to the **Voice Setup** page in your TIXAE dashboard.  
+1. Navigate to the **Voice Setup** page in your Orova dashboard.  
 2. Select the **Transcriber** tab.  
 
 ---
