--- a/voice/pricing.mdx
+++ b/voice/pricing.mdx
@@ -4,13 +4,13 @@ description: "Learn how voice-to-voice interactions are priced."
 icon: "money-bill"
 ---
 
-Learn how **voice-to-voice interactions** are priced, including TIXAE Agents' base fees, providers' costs, and concurrency limitations.
+Learn how **voice-to-voice interactions** are priced, including Orova Agents' base fees, providers' costs, and concurrency limitations.
 
 ---
 
 ## 💰 Base Pricing  
 
-TIXAE Agents charges a **base fee of 10 credits per minute** in addition to the provider's costs.
+Orova Agents charges a **base fee of 10 credits per minute** in addition to the provider's costs.
 
 - For the **Pro Plan**, this equals approximately **4 cents per minute**.  
 - The higher your plan, the more credits you receive, which reduces the per-minute cost.
@@ -156,4 +156,4 @@ The Voice Suite supports up to **10 concurrent calls per workspace**.
 
 ---
 
-Start building cost-efficient, powerful voice-enabled applications with **TIXAE Voice Suite** today! 🚀
+Start building cost-efficient, powerful voice-enabled applications with **Orova Voice Suite** today! 🚀
