--- a/voice/setup/example.mdx
+++ b/voice/setup/example.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Setup Example"
-description: "Learn how to setup voice to voice interactions in TIXAE Agents."
+description: "Learn how to setup voice to voice interactions in Orova Agents."
 icon: "microphone"
 ---
 
@@ -19,7 +19,7 @@ The transcriber main role is to detect 2 main events:
 - Any text transcribed detected in the incoming audio stream to handle interruptions ASAP if needed.
 - Detecting once the user has stopped talking to handle the end of the conversation and trigger the LLM to generate a response.
 
-For every provider there will be different configurations and pricing, we'll charge the credits worth of whatever the provider costs if you're using TIXAE's own API keys, you can use yours by adding them from the credentials tab.
+For every provider there will be different configurations and pricing, we'll charge the credits worth of whatever the provider costs if you're using Orova's own API keys, you can use yours by adding them from the credentials tab.
 
 The model used by the transcriber is by default going to be the fastest available one, in this case it's `nova-2` which is the fastest one.
 
