--- a/voice/setup/twilio.mdx
+++ b/voice/setup/twilio.mdx
@@ -1,16 +1,16 @@
 ---
 title: Twilio Setup
-description: "Learn how to setup voice to voice interactions in TIXAE Agents."
+description: "Learn how to setup voice to voice interactions in Orova Agents."
 icon: "phone"
 ---
 
-Integrate **Twilio** with the Voice Suite to enable seamless phone number management and real-time calling. Follow the steps below to configure Twilio in your TIXAE dashboard.  
+Integrate **Twilio** with the Voice Suite to enable seamless phone number management and real-time calling. Follow the steps below to configure Twilio in your Orova dashboard.  
 
 ---
 
 ## 🛠 Step 1: Access the Voice Setup Page  
 
-1. Navigate to the **Voice Setup** page in the TIXAE dashboard.  
+1. Navigate to the **Voice Setup** page in the Orova dashboard.  
 2. Select the **Phone Numbers** tab.  
 
 ![Voice Setup Page](/voice/assets/select_number.png)  
@@ -47,7 +47,7 @@ Integrate **Twilio** with the Voice Suite to enable seamless phone number manage
 
 ## 📊 Cost Breakdown  
 
-- TIXAE Voice charges **10 credits per minute** for Twilio calls.  
+- Orova Voice charges **10 credits per minute** for Twilio calls.  
 - The cost per minute is displayed in the dashboard:  
   - **22 Credits ~ 0.083 USD/Min**.  
 
