--- a/voice/setup/webcalling.mdx
+++ b/voice/setup/webcalling.mdx
@@ -1,10 +1,10 @@
 ---
 title: Web Calling
-description: "Learn how to enable voice-to-voice interactions in TIXAE Agents using Web Calling."
+description: "Learn how to enable voice-to-voice interactions in Orova Agents using Web Calling."
 icon: "browsers"
 ---
 
-Learn how to enable **voice-to-voice interactions** in TIXAE Agents using Web Calling. With this feature, users can make calls directly from your website using the TIXAE Voice widget.
+Learn how to enable **voice-to-voice interactions** in Orova Agents using Web Calling. With this feature, users can make calls directly from your website using the Orova Voice widget.
 
 ---
 
@@ -12,7 +12,7 @@ Learn how to enable **voice-to-voice interactions** in TIXAE Agents using Web Ca
 
 Web Calling allows seamless voice communication from your widget. Follow these steps to enable the feature:  
 
-1. Navigate to the **Voice Setup** page in your TIXAE dashboard.  
+1. Navigate to the **Voice Setup** page in your Orova dashboard.  
 2. Go to the **Advanced & Settings** tab.  
 3. Enable **"Web Calling"** by toggling the switch.  
 
@@ -28,7 +28,7 @@ Web Calling allows seamless voice communication from your widget. Follow these s
 
 To integrate the widget into your website:  
 
-1. In the TIXAE **Agent Dashboard**, click on **Deploy** at the top right.  
+1. In the Orova **Agent Dashboard**, click on **Deploy** at the top right.  
 2. Copy the generated **script snippet**.  
 3. Paste the script into your website’s HTML.  
 
@@ -57,4 +57,4 @@ We support **different deployment options** for your website:
 
 ---
 
-You’re all set! With Web Calling enabled, your users can now interact seamlessly using the TIXAE Voice widget. 🚀
+You’re all set! With Web Calling enabled, your users can now interact seamlessly using the Orova Voice widget. 🚀
