--- a/whitelabeling/clients/client-billing/billing-activation.mdx
+++ b/whitelabeling/clients/client-billing/billing-activation.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Activation for Clients"
-description: "Guide to enabling billing for client organizations in TIXAE Agents."
+description: "Guide to enabling billing for client organizations in Orova Agents."
 icon: credit-card
 ---
 
