--- a/whitelabeling/clients/client-billing/billing-faq.mdx
+++ b/whitelabeling/clients/client-billing/billing-faq.mdx
@@ -4,10 +4,10 @@ description: "Answers to common questions about billing and credits for agency o
 icon: puzzle
 ---
 
-Get answers to the most common questions about billing and credits in TIXAE Agents. This guide explains pricing, transactions, and how to manage billing effectively.
+Get answers to the most common questions about billing and credits in Orova Agents. This guide explains pricing, transactions, and how to manage billing effectively.
 
 <Callout type="info">
-  All financial transactions are securely processed via Stripe. TIXAE Agents
+  All financial transactions are securely processed via Stripe. Orova Agents
   does not store credit card information.
 </Callout>
 
@@ -20,14 +20,14 @@ Get answers to the most common questions about billing and credits in TIXAE Agen
 The final credit price combines the agency owner’s set price with our base price. For example:
 
 - Agency Owner Price: `$0.004`
-- TIXAE Base Price: `$0.002`
+- Orova Base Price: `$0.002`
 - **Final Price**: `$0.006`
 
 ### 2. **What happens when a customer makes a payment?**
 
 When a customer pays for credits:
 
-1. TIXAE Agents deducts the **base credit price** for each purchased credit.
+1. Orova Agents deducts the **base credit price** for each purchased credit.
 2. A **5% service fee** is applied to the agency owner’s margin.
 
 <Tip>
@@ -89,9 +89,9 @@ Agency owners can grant billing access to specific users in the organization:
   financial operations.
 </Callout>
 
-### 8. **What is TIXAE's service fee?**
+### 8. **What is Orova's service fee?**
 
-TIXAE Agents charges a **5% fee** on the agency owner’s margin after deducting the base credit price.
+Orova Agents charges a **5% fee** on the agency owner’s margin after deducting the base credit price.
 
 <Tip>
   This fee ensures a seamless billing experience with secure transactions and
@@ -102,9 +102,9 @@ TIXAE Agents charges a **5% fee** on the agency owner’s margin after deducting
 
 Payouts are processed directly to the agency owner’s connected **Stripe account**. Ensure your Stripe account is properly configured to receive payouts without delays.
 
-### 10. **Does TIXAE save credit card information?**
+### 10. **Does Orova save credit card information?**
 
-No, TIXAE Agents does not save any credit card details. All payment information is securely handled by **Stripe**.
+No, Orova Agents does not save any credit card details. All payment information is securely handled by **Stripe**.
 
 ---
 
