--- a/whitelabeling/clients/client-billing/billing-overview.mdx
+++ b/whitelabeling/clients/client-billing/billing-overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Whitelabel Stripe Billing "
-description: "Set up billing with Stripe for seamless customer transactions in TIXAE Agents."
+description: "Set up billing with Stripe for seamless customer transactions in Orova Agents."
 icon: dollar-sign
 ---
 
