--- a/whitelabeling/clients/client-dashboard/features.mdx
+++ b/whitelabeling/clients/client-dashboard/features.mdx
@@ -86,4 +86,4 @@ View [Analytics](/whitelabeling/clients/client-dashboard/analytics) documentatio
 
 ## Conclusion  
 
-The Client Dashboard in TIXAE Agents equips you with the tools needed to efficiently manage client organizations and deliver exceptional AI-powered services. Use these features to expand your agency and build stronger client relationships.
+The Client Dashboard in Orova Agents equips you with the tools needed to efficiently manage client organizations and deliver exceptional AI-powered services. Use these features to expand your agency and build stronger client relationships.
