--- a/whitelabeling/clients/creating-users.mdx
+++ b/whitelabeling/clients/creating-users.mdx
@@ -5,13 +5,13 @@ icon: user
 ---
 
 
-Adding users to your client organizations is a crucial step in setting up effective client management in TIXAE Agents. This guide will walk you through the process of creating and managing users for your client organizations.
+Adding users to your client organizations is a crucial step in setting up effective client management in Orova Agents. This guide will walk you through the process of creating and managing users for your client organizations.
 
 ## Accessing User Management
 
 <Steps>
   <Step title="Navigate to Client Tab">
-    Go to the `Client` tab in your TIXAE Agents dashboard.
+    Go to the `Client` tab in your Orova Agents dashboard.
   </Step>
   <Step title="Select Organization">
     Find the **client organization** you want to manage from the list on the left.
@@ -145,7 +145,7 @@ After creating a user account, you can send an invitation for them to access the
 
 ## Related Documentation
 
-Explore these related topics to further enhance your understanding of TIXAE Agent's whitelabel features:
+Explore these related topics to further enhance your understanding of Orova Agent's whitelabel features:
 
 <CardGroup cols={2}>
   <Card title="Managing Organizations" icon="building" href="/whitelabeling/clients/managing-organizations">
