--- a/whitelabeling/clients/managing-organizations.mdx
+++ b/whitelabeling/clients/managing-organizations.mdx
@@ -4,7 +4,7 @@ description: ''
 icon: users
 ---
 
-Effectively managing client organizations is crucial for maintaining a **structured** and **efficient** agency operation in TIXAE Agents. This guide will walk you through the process of creating, editing, and managing client organizations.
+Effectively managing client organizations is crucial for maintaining a **structured** and **efficient** agency operation in Orova Agents. This guide will walk you through the process of creating, editing, and managing client organizations.
 
 <Frame>
     <img src="/images/clients-ui.png" />
@@ -15,7 +15,7 @@ Effectively managing client organizations is crucial for maintaining a **structu
 
 <Steps>
   <Step title="Access Client Tab">
-    Navigate to the `Client` tab in your TIXAE Agents dashboard.
+    Navigate to the `Client` tab in your Orova Agents dashboard.
     
   </Step>
   <Step title="Initiate Creation">
@@ -117,7 +117,7 @@ After creating an organization, you can customize various settings to tailor the
 
 ## Related Documentation
 
-Explore these related topics to further enhance your understanding of TIXAE Agent's whitelabel features:
+Explore these related topics to further enhance your understanding of Orova Agent's whitelabel features:
 
 <CardGroup cols={2}>
   <Card title="Creating Users" icon="user-plus" href="/whitelabeling/clients/creating-users">
