--- a/whitelabeling/clients/overview.mdx
+++ b/whitelabeling/clients/overview.mdx
@@ -4,9 +4,9 @@ description: ''
 icon: tree
 ---
 
-# Client Management in TIXAE Agents
+# Client Management in Orova Agents
 
-Welcome to the Client Management section of TIXAE Agent's whitelabel platform. This powerful feature allows you to create, manage, and support your clients all from one centralized dashboard.
+Welcome to the Client Management section of Orova Agent's whitelabel platform. This powerful feature allows you to create, manage, and support your clients all from one centralized dashboard.
 
 <Note>
   The whitelabel addon is designed for agencies and businesses looking to offer AI chatbot services under their own brand. If you haven't enabled whitelabeling yet, check out our [Getting Started with Whitelabeling](/whitelabeling/getting-started) guide.
@@ -31,7 +31,7 @@ Welcome to the Client Management section of TIXAE Agent's whitelabel platform. T
 
 ## Client Management Workflow
 
-Here's a quick overview of the client management process in TIXAE Agents:
+Here's a quick overview of the client management process in Orova Agents:
 
 <Steps>
   <Step title="Create Organization">
@@ -72,7 +72,7 @@ The client management interface is divided into two main sections:
 
 ## Next Steps
 
-Now that you have an overview of client management in TIXAE Agents, dive into the specific processes:
+Now that you have an overview of client management in Orova Agents, dive into the specific processes:
 
 <CardGroup cols={2}>
   <Card title="Managing Organizations" icon="building-user" href="/whitelabeling/clients/managing-organizations">
