Rebranded-TIXAE-to-Orova-in-Canvas

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -12,9 +12,9 @@ https://na-vg-edge.moeaymandev.workers.dev
 
 Anything with /v3/ at the beginning will be using these endpoints:
 #### V3 EU Region:
-https://eu-TIXAE Agents-runtime-vbmbkqccuq-ey.a.run.app
+https://eu-Orova Agents-runtime-vbmbkqccuq-ey.a.run.app
 #### V3 NA Region:
-https://na-runtime.TIXAE Agents.org
+https://na-runtime.Orova Agents.org
 
 <Warning>If you use the incorrect endpoint the API will not work.</Warning>
 
