--- a/canvas/features/tools-integration.mdx
+++ b/canvas/features/tools-integration.mdx
@@ -1,6 +1,6 @@
 ---
 title: Tools Integration
-description: Learn how to integrate and manage tools in the Canvas feature of TIXAE Agents.
+description: Learn how to integrate and manage tools in the Canvas feature of Orova Agents.
 icon: Wrench
 ---
 
