--- a/canvas/features/variables.mdx
+++ b/canvas/features/variables.mdx
@@ -1,6 +1,6 @@
 ---
 title: Variables
-description: Manage and use variables to store and pass data in the Canvas feature of TIXAE Agents.
+description: Manage and use variables to store and pass data in the Canvas feature of Orova Agents.
 icon: X
 ---
 
