--- a/canvas/introduction.mdx
+++ b/canvas/introduction.mdx
@@ -1,13 +1,13 @@
 ---
 title: Canvas Introduction
-description: Learn about the Canvas feature for building advanced AI agents with TIXAE Agents.
+description: Learn about the Canvas feature for building advanced AI agents with Orova Agents.
 icon: "rocket"
 ---
 
 Introductory video to Canvas:  
 <iframe width="550" height="325" src="https://www.youtube.com/embed/ZwzE_-H4pBY" title="Create Advanced AI Voice + Text Agents in Seconds" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-Building an AI agent is a multi-step process that requires careful planning and execution. With the **Canvas** feature, TIXAE Agents revolutionizes how you design and manage AI-powered agents by introducing a flow-based interface for enhanced flexibility and scalability.
+Building an AI agent is a multi-step process that requires careful planning and execution. With the **Canvas** feature, Orova Agents revolutionizes how you design and manage AI-powered agents by introducing a flow-based interface for enhanced flexibility and scalability.
 
 ## What does it take to create an AI agent?
 
@@ -24,7 +24,7 @@ Among these steps, the **prompting** process is pivotal. The more selective and 
 
 ---
 
-## Why TIXAE Agents' Canvas?
+## Why Orova Agents' Canvas?
 
 Most systems today operate with a single system prompt and a limited set of tools. While this approach works for basic AI tasks, it falls short for more complex scenarios. For example, imagine building:
 
