--- a/canvas/nodes/overview.mdx
+++ b/canvas/nodes/overview.mdx
@@ -4,7 +4,7 @@ description: Learn about creating, managing, and customizing nodes to build comp
 icon: tree
 ---
 
-In the **Canvas** feature of TIXAE Agents, nodes form the building blocks for creating flexible, flow-based AI agent configurations. These nodes allow you to define specific behaviors, inputs, and outputs, making it easier to design complex interactions.
+In the **Canvas** feature of Orova Agents, nodes form the building blocks for creating flexible, flow-based AI agent configurations. These nodes allow you to define specific behaviors, inputs, and outputs, making it easier to design complex interactions.
 
 ## Types of Nodes
 
