--- a/deploy/react-voice-orb.mdx
+++ b/deploy/react-voice-orb.mdx
@@ -24,7 +24,7 @@ npm install @tixae-labs/react-voice-orb@latest
 ## Usage
 
 ### Prerequisites
-- Navigate to the [TIXAE Dashboard](https://landing.tixaeagents.ai/) and create an agent.
+- Navigate to the [Orova Dashboard](https://landing.tixaeagents.ai/) and create an agent.
 - Use the agent id and region parameters to start a voice call from the URL:
     1. agentId - The agent id is a unique identifier for the agent you want to call.
     2. region - The region is the region of the agent you want to call.
@@ -64,7 +64,7 @@ const layout = (props: { children: React.ReactNode }) => {
 
 export default layout;
 ```
-<Note>Replace "agentId" and "region" with values from your TIXAE Dashboard.</Note>
+<Note>Replace "agentId" and "region" with values from your Orova Dashboard.</Note>
 
 2. Use the `useAIVoice` hook and the `AudioAnimationOrb` component to control the call and display the orb.
 
