--- a/deploy/script.mdx
+++ b/deploy/script.mdx
@@ -5,7 +5,7 @@ icon: 'book'
 ---
 
 # Script
-You can deploy TIXAE with a script.
+You can deploy Orova with a script.
 
 ## Overview
 
@@ -25,7 +25,7 @@ After loading the script, initialize the Voice Orb by calling its global initial
 <script>
   // Initialize the Voice Orb widget
   window.VoiceOrb.init({
-    agentId: "YOUR_AGENT_ID",   // Replace with your agentId from TIXAE.
+    agentId: "YOUR_AGENT_ID",   // Replace with your agentId from Orova.
     region: "YOUR_REGION",      // Replace with your agent's region (e.g., "eu" or "na").
     targetElementId: "voice-orb-container", // The ID of the element where the orb should render
     
