--- a/canvas/nodes/creating-nodes.mdx
+++ b/canvas/nodes/creating-nodes.mdx
@@ -1,10 +1,10 @@
 ---
 title: Creating Nodes
-description: Step-by-step guide to creating, managing, and customizing nodes in the Canvas feature of TIXAE Agents.
+description: Step-by-step guide to creating, managing, and customizing nodes in the Canvas feature of Orova Agents.
 icon: add
 ---
 
-Nodes are the backbone of the **Canvas** feature in TIXAE Agents, allowing you to define specific tasks and behaviors within your agent's flow. This guide walks you through the process of creating and managing nodes effectively.
+Nodes are the backbone of the **Canvas** feature in Orova Agents, allowing you to define specific tasks and behaviors within your agent's flow. This guide walks you through the process of creating and managing nodes effectively.
 
 ---
 
